force-app/main/default/objects/User_Group_Item__c/User_Group_Item__c.object-meta.xml
<CustomObject>
    <label>User Group Item</label>
    <nameField>
        <displayFormat>UGI-{000000}</displayFormat>
        <label>User Group Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Group Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>