force-app/main/default/objects/User_Group_Item__c/fields/GroupUserUniqueId__c.field-meta.xml
<CustomField>
    <fullName>GroupUserUniqueId__c</fullName>
    <label>GroupUserUniqueId</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>