force-app/main/default/objects/User_Group_Item__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.ProfileId</field>
            <operation>equals</operation>
            <value>00e2p000001Prug</value>
        </filterItems>
        <infoMessage>Please select Community User</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>User_Group_Items</relationshipName>
    <type>Lookup</type>
</CustomField>