force-app/main/default/objects/User_Group_Item__c/fields/User_File__c.field-meta.xml
<CustomField>
    <fullName>User_File__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User File</label>
    <referenceTo>User_File__c</referenceTo>
    <relationshipLabel>User Group Items</relationshipLabel>
    <relationshipName>User_Group_Items</relationshipName>
    <type>Lookup</type>
</CustomField>