force-app/main/default/objects/User_Group_Item__c/fields/User_Group__c.field-meta.xml
<CustomField>
    <fullName>User_Group__c</fullName>
    <label>User Group</label>
    <referenceTo>User_Group__c</referenceTo>
    <relationshipLabel>User Group Items</relationshipLabel>
    <relationshipName>User_Group_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>